--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "webfontloader": "^1.6.28"
+    "react-dom": "^15.6.1"
   },
   "devDependencies": {
     "axios": "^0.16.2",
